--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LDH's Blog - 技术与创意</title>
-    <meta name="description" content="LDH的个人博客 - 分享技术心得、学习笔记和创意想法">
-    <meta name="keywords" content="技术博客, 前端开发, JavaScript, 算法, 编程学习">
+    <meta name="description" content="LDH的个人博客">
+    <meta name="keywords" content="">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -66,14 +67,13 @@
         <aside class="sidebar">
             <div class="widget profile">
                 <div class="avatar">
-                    <i class="fas fa-user"></i>
+                    <img src="b.png" alt="Orion的头像" class="avatar-img">
                 </div>
-                <h3 class="widget-title">Orion</h3>
+                <h3 class="widget-title">LDH</h3>
                 <p>一个初中生</p>
                 <div class="social-links">
                     <a href="https://github.com/Orion-LDH" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://weixin.qq.com/" title="微信"><i class="fab fa-weixin"></i></a>
-                    
                 </div>
             </div>
             
