--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我 - LDH's Blog</title>
-    <meta name="description" content="关于LDH - 一个热爱编程的初中生">
+    <meta name="description" content="关于">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -51,16 +52,17 @@
         <aside class="sidebar">
             <div class="widget profile">
                 <div class="avatar">
-                    <i class="fas fa-user"></i>
+                    <img src="b.png" alt="LDH的头像" class="avatar-img">
                 </div>
                 <h3 class="widget-title">LDH</h3>
                 <p>一个初中生</p>
                 <div class="social-links">
                     <a href="https://github.com/Orion-LDH" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://weixin.qq.com/" title="微信"><i class="fab fa-weixin"></i></a>
-                    
                 </div>
             </div>
+
+
             <div class="widget">
                 <h3 class="widget-title">联系我</h3>
                 <ul class="contact-list">
