--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <aside class="sidebar">
             <div class="widget profile">
                 <div class="avatar">
-                    <img src="b.png" alt="LDH的头像" class="avatar-img">
+                    <img src="head-img.png" alt="LDH的头像" class="avatar-img">
                 </div>
                 <h3 class="widget-title">LDH</h3>
                 <p>一个初中生</p>
