--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LDH's Blog - 技术与创意</title>
+    <title>LDH's Blog </title>
     <meta name="description" content="LDH的个人博客">
     <meta name="keywords" content="">
     <link rel="icon" type="image/x-icon" href="icon.ico">
