--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>LDH's Blog </title>
     <meta name="description" content="LDH的个人博客">
     <meta name="keywords" content="">
-    <link rel="icon" type="image/x-icon" href="icon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="icon" type="image/png" href="icon.png">         
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
